# TEMA2-IEP

./: CMakeLists.txt  hello.cpp  hello.hpp  main.cpp
Carte/: CMakeLists.txt
Carte/src/Carte/: carte.cpp  carte.hpp
carte-exe/: CMakeLists.txt
hello-exe/: CMakeLists.txt  main.cpp
say-hello/: CMakeLists.txt
say-hello/src/say-hello/: hello.cpp  hello.hpp
